--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		
 		<nav>
 			<div class="profile">
-				<img src="Images/JordanTURNACO.png" alt="profile photo"/>
+				<img src="Images/TURNACO.png" alt="profile photo"/>
 				<h1><a href="Index.html">TURNACO Jordan</a></h1>
 			</div>
 			<ul>
