--- a/index.html
+++ b/index.html
@@ -84,9 +84,16 @@
 						</p>
 						<p class="dates">Dates 2023 - 2024</p>
 					</div>
-                    <div class="project">
-                        <h4>Pour plus d'information sur mes projets aller dans la categorie Mes projets</h4>
-                    </div>
+					<div class="project">
+						<h4>Constrution d'un cahier des charges </h4>
+						<p class="description">
+							Lors de ce projet en groupe nous devions faire un cahier des charges pour la communication digital d'une entreprise de seminaire en entreprise
+						</p>
+						<p class="dates">Dates 2023 - 2024</p>
+					</div>
+			                <div class="project">
+			                        <h4>Pour plus d'information sur mes projets aller dans la categorie Mes projets</h4>
+			                </div>
 					
 					
 				</div>
