--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
 							Lors d'un projets de cours le professeur nous a donner pour devoir de reconstituer la BDD de twitch , reduite a 50 table SQL 
 						</p>
 						<p class="dates">Dates 2023 - 2024</p>
+						<div class="project">
+							<h4>Constrution d'un cahier des charges </h4>
+							<p class="description">
+								Lors de ce projet en groupe nous devions faire un cahier des charges pour la communication digital d'une entreprise de seminaire en entreprise
+							</p>
+							<p class="dates">Dates 2023 - 2024</p>
 					</div>
                     <div class="project">
                         <h4>Pour plus d'information sur mes projets aller dans la categorie Mes projets</h4>
