--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<nav>
 			<div class="profile">
 				<img src="Images/TURNACO.png" alt="profile photo"/>
-				<h1><a href="index.html">TURNACO Jordan</a></h1>
+				<h1><a href="./">TURNACO Jordan</a></h1>
 			</div>
 			<ul>
 				<li><a href="Apropos.html">A propos</a></li>
@@ -90,16 +90,9 @@
 							</p>
 							<p class="dates">Dates 2023 - 2024</p>
 					</div>
-					<div class="project">
-						<h4>Constrution d'un cahier des charges </h4>
-						<p class="description">
-							Lors de ce projet en groupe nous devions faire un cahier des charges pour la communication digital d'une entreprise de seminaire en entreprise
-						</p>
-						<p class="dates">Dates 2023 - 2024</p>
-					</div>
-			                <div class="project">
-			                        <h4>Pour plus d'information sur mes projets aller dans la categorie Mes projets</h4>
-			                </div>
+                    <div class="project">
+                        <h4>Pour plus d'information sur mes projets aller dans la categorie Mes projets</h4>
+                    </div>
 					
 					
 				</div>
