--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<p>
 					Je suis TURNACO jordan , j'ai 18 ans et je suis passionné par l'informatique en général
 				</p>
-				<button onclick="location.href='More.html'">
+				<button onclick="location.href='Apropos.html'">
                     En savoir plus
                 </button>
 			</header>
