--- a/index.html
+++ b/index.html
@@ -24,19 +24,21 @@
 			  xhr.send();
 			});
 		</script>
+		<header>
+			<nav>
+				<div class="profile">
+					<img src="Images/TURNACO.png" alt="profile photo"/>
+					<h1><a href="./">TURNACO Jordan</a></h1>
+				</div>
+				<ul>
+					<li><a href="Apropos.html">A propos</a></li>
+					<li><a href="Projet.html">Mes projets</a></li>
+					<li><a href="CV TURNACO Jordan STAGE.pdf" id="download-button" download>Curriculum Vitae</a></li>
+					
+				</ul>
+			</nav>
+		</header>
 		
-		<nav>
-			<div class="profile">
-				<img src="Images/TURNACO.png" alt="profile photo"/>
-				<h1><a href="./">TURNACO Jordan</a></h1>
-			</div>
-			<ul>
-				<li><a href="Apropos.html">A propos</a></li>
-				<li><a href="Projet.html">Mes projets</a></li>
-				<li><a href="CV TURNACO Jordan STAGE.pdf" id="download-button" download>Curriculum Vitae</a></li>
-				
-			</ul>
-		</nav>
 		
 		<section class="page-content">
 			<header>
