--- a/Apropos.html
+++ b/Apropos.html
@@ -38,29 +38,37 @@
 			
 			<h1>A PROPOS DE MOI : </h1>
 			<section class="presentation-image">
-				<img src="Images/strategie_cybersecurite.webp" alt="AI image" />
-				<img src="Images/Cybersecurite-2.webp" alt="AI image" />
+				<img src="Images\codage-informatique-scaled.jpeg" id="AI image" />
 			</section>
 			<p class="Description">
-				Je m'appelle TURNACO Jordan et j'ai 18 ans. Depuis mon plus jeune âge, 
-				j'ai nourri une passion ardente pour le monde de l'informatique, plus précisément pour la cybersécurité. 
-				Fasciné par les défis complexes et en constante évolution du cyberespace, 
-				je consacre une grande partie de mon temps à approfondir mes connaissances et à développer mes compétences dans ce domaine en perpétuelle mutation.
-				Ma curiosité insatiable me pousse à explorer les dernières tendances en matière d'informatique, 
-				et j'aime relever les défis qui accompagnent la protection des systèmes et des données contre les menaces en ligne.
-				En tant que jeune passionné d'informatique, je suis déterminé à contribuer positivement à l'évolution constante et à jouer un rôle actif dans la protection des informations numériques.
-				Mon rève et but: Devenir ingénieur en cybersécurité 
+				<h2>Mon profil : </h2>
+				<p>Je suis TURNACO Jordan, un passionné de 18 ans évoluant dans le monde de l'informatique avec une fascination particulière pour la cybersécurité. Depuis mes premiers pas, j'ai consacré mon énergie à approfondir mes connaissances et à développer mes compétences, animé par le désir de relever les défis complexes et évolutifs du cyberespace.</p>
+				<p>Ma soif de connaissance m'entraîne constamment à explorer les dernières tendances en informatique, et j'aime particulièrement relever les défis liés à la protection des systèmes et des données contre les menaces en ligne. En tant que jeune passionné d'informatique, je suis déterminé à contribuer positivement à l'évolution constante de ce domaine et à jouer un rôle actif dans la protection des informations numériques.</p>
+				<h3>Coordonnées</h3>
+				<p><strong>Téléphone:</strong> 0612302068</p>
+				<p><strong>Email:</strong> jordanturnaco@gmail.com</p>
+				<p><strong>Adresse:</strong> 5 allée du parc, Thorigny-sur-marne</p>
+				<h3>Formation</h3>
+				<p>EPSI - Première année, Bachelor Informatique (Formation en cours)</p>
+				<h3>Compétences techniques</h3>
+				<ul>
+					<li><strong>Langages:</strong> Python, HTML, CSS, PHP</li>
+					<li><strong>Base de données:</strong> Conception et exploitation</li>
+					<li><strong>Arts Visuels:</strong> Montages vidéos, Création de logos, dessins de personnages (depuis 7 ans)</li>
+					<li><strong>Veille Technologique:</strong> Montages d’ordinateurs, Carte Arduino, Programmations</li>
+				</ul>
+				<h3>Projets récents</h3>
+				<ul>
+					<li><strong>Projet Base de données (NOVEMBRE 2023) - EPSI</strong><br> Recréation de la base de données de Twitch en environ 60 tables</li>
+					<li><strong>Projet Conception d’un site de Vélos électriques (NOVEMBRE 2023) - EPSI</strong><br> Création d'un site responsive en PHP, HTML, CSS avec une base de données MYSQL</li>
+					<li><strong>Projet Conception d’une application Python (FEVRIER 2024) - EPSI</strong><br> Création d'une application en console Python</li>
+				</ul>
+				<p >En savoir plus via mon cv <button class="cv-button">Curriculum Vitae</button> </p>
 			</p>
 			<p class="Description">
-				Je suis actuellement étudiant en 1ere année du bachlor a l'epsi paris , par la suite comme vous l'aurez probablement deviener je compte m'orienter vers la filiaire cybersécurité 
-				&rarr; voir pied de page pour plus d'informations sur l'écoles
+				Actuellement en première année du Bachelor à l'EPSI Paris, je prévois, comme cela peut être déduit, de me spécialiser ultérieurement dans la filière cybersécurité. Pour plus de détails sur l'école, veuillez consulter le pied de page.
 				<br>
-				<a href="https://www.instagram.com/xoudarkk/" class="Inslink">
-					<img src="https://img.freepik.com/vecteurs-premium/instagram-icone-nouveau_488108-3.jpg" alt="instagram">
-				</a>
-				<a href="https://www.facebook.com/jordan.turnaco?locale=fr_FR"class="facebooklink">
-					<img src="https://store-images.s-microsoft.com/image/apps.37935.9007199266245907.b029bd80-381a-4869-854f-bac6f359c5c9.91f8693c-c75b-4050-a796-63e1314d18c9?h=464" alt="instagram">@xoudarkk
-				</a>
+				
 			</p>
 			
 			<section class="Epsi">
