--- a/Apropos.html
+++ b/Apropos.html
@@ -21,15 +21,16 @@
 		  xhr.send();
 		});
 	</script>
-		<nav>
-			<div class="profile">
-				<img src="Images/TURNACO.png" alt="profile photo"/>
-				<h1><a href="Index.html">TURNACO Jordan</a></h1>
-			</div>
-			<ul>
-				<li><a href="Apropos.html">A propos</a></li>
-				<li><a href="Projet.html">Mes projets</a></li>
-				<li><a href="CV.html">Curriculum Vitae</a></li>
+	
+	<nav>
+		<div class="profile">
+			<img src="images/TURNACO.png" alt="profile photo"/>
+			<h1><a href="./">TURNACO Jordan</a></h1>
+		</div>
+		<ul>
+			<li><a href="about.php">A propos</a></li>
+			<li><a href="projet.php">Mes projets</a></li>
+			<li><a href="CV TURNACO Jordan STAGE.pdf" id="download-button" download>Curriculum Vitae</a></li>
 				
 			</ul>
 		</nav>
