--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<nav>
 			<div class="profile">
 				<img src="Images/TURNACO.png" alt="profile photo"/>
-				<h1><a href="./">TURNACO Jordan</a></h1>
+				<h1><a href="index.html">TURNACO Jordan</a></h1>
 			</div>
 			<ul>
 				<li><a href="Apropos.html">A propos</a></li>
