--- a/Projet.html
+++ b/Projet.html
@@ -25,7 +25,7 @@
 	<nav>
 		<div class="profile">
 			<img src="images/TURNACO.png" alt="profile photo"/>
-			<h1><a href="./">TURNACO Jordan</a></h1>
+			<h1><a href="index.html">TURNACO Jordan</a></h1>
 		</div>
 		<ul>
 			<li><a href="about.php">A propos</a></li>
