--- a/Projet.html
+++ b/Projet.html
@@ -28,8 +28,8 @@
 			<h1><a href="index.html">TURNACO Jordan</a></h1>
 		</div>
 		<ul>
-			<li><a href="about.php">A propos</a></li>
-			<li><a href="projet.php">Mes projets</a></li>
+			<li><a href="Apropos.html">A propos</a></li>
+			<li><a href="Projet.html">Mes projets</a></li>
 			<li><a href="CV TURNACO Jordan STAGE.pdf" id="download-button" download>Curriculum Vitae</a></li>
 				
 			</ul>
