--- a/Apropos.html
+++ b/Apropos.html
@@ -64,7 +64,8 @@
 					<li><strong>Projet Conception d’un site de Vélos électriques (NOVEMBRE 2023) - EPSI</strong><br> Création d'un site responsive en PHP, HTML, CSS avec une base de données MYSQL</li>
 					<li><strong>Projet Conception d’une application Python (FEVRIER 2024) - EPSI</strong><br> Création d'une application en console Python</li>
 				</ul>
-				<p >En savoir plus via mon cv <button class="cv-button">Curriculum Vitae</button> </p>
+				<p>En savoir plus via mon <a class="cv-button" href="CV TURNACO Jordan STAGE.pdf" download>Curriculum Vitae</a></p>
+
 			</p>
 			<p class="Description">
 				Actuellement en première année du Bachelor à l'EPSI Paris, je prévois, comme cela peut être déduit, de me spécialiser ultérieurement dans la filière cybersécurité. Pour plus de détails sur l'école, veuillez consulter le pied de page.
