--- a/Apropos.html
+++ b/Apropos.html
@@ -81,7 +81,7 @@
 	<div class="colonne">
 		<h3>Mes écoles frequenté </h3>
 		<p><a href="https://www.lyceevandongen.fr">Lycée vanDongen</a></p>
-		<p><a href="https://www.epsi.fr">EPSI écoles d'ingenierie informatioque</a></p>
+		<p><a href="https://www.epsi.fr">EPSI écoles d'ingenierie informatioue</a></p>
 		
 	</div>
 	
