--- a/Projet.html
+++ b/Projet.html
@@ -37,5 +37,22 @@
 		<div class="YoutubeVideo">
 			<iframe width="50%" src="https://www.youtube.com/embed/shyJE-wc9gg" frameborder="0" allowfullscreen></iframe>
 		</div>
+		
+		<footer>
+			<div class="colonne">
+				<h3>Mes écoles frequenté </h3>
+				<p><a href="https://www.lyceevandongen.fr">Lycée vanDongen</a></p>
+				<p><a href="https://www.epsi.fr">EPSI écoles d'ingenierie informatique</a></p>
+				
+			</div>
+			
+			<div class="colonne">
+				<h3>Mes adresses mails</h3>
+                <p>- Par ordre de frequentation -</p>
+				<p>jordanturnaco@gmail.com</p>
+				<p>jordan.turnaco.pro@gmail.com</p>
+				<p>jordan.turnaco@ecoles-epsi.net</p>
+			</div>
+		</footer>
 </body>
 </html>
