modification fichier projet

--- a/Apropos.html
+++ b/Apropos.html
@@ -30,7 +30,7 @@
 		<ul>
 			<li><a href="Apropos.html">A propos</a></li>
 			<li><a href="Projet.html">Mes projets</a></li>
-			<li><a href="CV TURNACO Jordan STAGE.pdf" id="download-button" download>Curriculum Vitae</a></li>
+			<li><a class="cv-button" href="CV TURNACO Jordan STAGE.pdf" id="download-button" download>Curriculum Vitae</a></li>
 				
 			</ul>
 		</nav>
@@ -59,18 +59,20 @@
 					<li><strong>Veille Technologique:</strong> Montages d’ordinateurs, Carte Arduino, Programmations</li>
 				</ul>
 				<h3>Projets récents</h3>
-				<ul>
+				<ul class="EPSi">
 					<li><strong>Projet Base de données (NOVEMBRE 2023) - EPSI</strong><br> Recréation de la base de données de Twitch en environ 60 tables</li>
 					<li><strong>Projet Conception d’un site de Vélos électriques (NOVEMBRE 2023) - EPSI</strong><br> Création d'un site responsive en PHP, HTML, CSS avec une base de données MYSQL</li>
 					<li><strong>Projet Conception d’une application Python (FEVRIER 2024) - EPSI</strong><br> Création d'une application en console Python</li>
 				</ul>
-				<p>En savoir plus via mon <a class="cv-button" href="CV TURNACO Jordan STAGE.pdf" download>Curriculum Vitae</a></p>
+				<section class="Ecole">
+				<p>En savoir plus via mon <a class="cv-button" href="Projet.html">Voir Projets</a></p>
 			
-			<p class="Description">
-				Actuellement en première année du Bachelor à l'EPSI Paris, je prévois, comme cela peut être déduit, de me spécialiser ultérieurement dans la filière cybersécurité. Pour plus de détails sur l'école, veuillez consulter le pied de page.
+				<p class="Description">
+					Actuellement en première année du Bachelor à l'EPSI Paris, je prévois, comme cela peut être déduit, de me spécialiser ultérieurement dans la filière cybersécurité. Pour plus de détails sur l'école, veuillez consulter le pied de page.
 				<br>
 				
 			</p>
+		    	</section>
 			
 			<section class="Epsi">
 				<img src="Images/Logo-EPSI-baseline.png" alt="Epsi logo">
