--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<ul>
 				<li><a href="Apropos.html">A propos</a></li>
 				<li><a href="Projet.html">Mes projets</a></li>
-				<li><a href="CV TURNACO Jordan STAGE.pdf" id="download-button" download>Curriculum Vitae</a></li>
+				<li><a class="cv-button" href="CV TURNACO Jordan STAGE.pdf" id="download-button" download>Curriculum Vitae</a></li>
 				
 			</ul>
 		</nav>
