modification fichier projet

--- a/Apropos.html
+++ b/Apropos.html
@@ -24,7 +24,7 @@
 	
 	<nav>
 		<div class="profile">
-			<img src="images/TURNACO.png" alt="profile photo"/>
+			<img src="Images/TURNACO.png" alt="profile photo"/>
 			<h1><a href="index.html">TURNACO Jordan</a></h1>
 		</div>
 		<ul>
