--- a/Projet.html
+++ b/Projet.html
@@ -60,7 +60,7 @@
 	
 	<nav>
 		<div class="profile">
-			<img src="images/TURNACO.png" alt="profile photo"/>
+			<img src="Images/TURNACO.png" alt="profile photo"/>
 			<h1><a href="index.html">TURNACO Jordan</a></h1>
 		</div>
 		<ul>
@@ -70,7 +70,7 @@
 				
 			</ul>
 		</nav>
-		<section class = "projet 1">
+		<section class = "projet_1">
 			<p><h1>Projet n°1 : Smartrash</h1></p>
 
 			<div class="YoutubeVideo">
@@ -78,7 +78,7 @@
 			</div>
 			
 		</section>
-		<section class = "projet 2">
+		<section class = "projet_2">
 			<p><h1>Projet n°2 : Conception de la base de donnée de twitch</h1></p>
 
 			<div class="YoutubeVideo">
@@ -89,7 +89,7 @@
 			</container>
 
 		</section>
-		<section class = "projet 3">
+		<section class = "projet_3">
 			<p><h1>Projet n°3 : Smartbike </h1></p>
 
 			<div class="YoutubeVideo">
@@ -100,7 +100,7 @@
 			</container>
 
 		</section>
-		<section class = "projet 4">
+		<section class = "projet_4">
 			<p><h1>Projet n°4 : Jeu du pendu en python</h1></p>
 			<div class="YoutubeVideo">
 				<iframe width="50%" src="https://www.youtube.com/embed/tLuav7l20qs?si=MlHSl6vZikb-3r3Z" frameborder="0" allowfullscreen></iframe>
