--- a/index.html
+++ b/index.html
@@ -12,17 +12,27 @@
 	<body>
 		<script>
 			document.getElementById("download-button").addEventListener("click", function() {
-			  var fileUrl = "CV TURNACO Jordan STAGE.pdf";
-			  var xhr = new XMLHttpRequest();
-			  xhr.open("GET", fileUrl, true);
-			  xhr.responseType = "blob";
-			  xhr.onload = function() {
+				var fileUrl = "CV TURNACO Jordan STAGE.pdf";
+			  	var xhr = new XMLHttpRequest();
+			  	xhr.open("GET", fileUrl, true);
+			  	xhr.responseType = "blob";
+			  	xhr.onload = function() {
 				var blob = xhr.response;
 				var filename = "file.pdf";
 				saveAs(blob, filename);
 			  };
 			  xhr.send();
 			});
+
+			function copyToClipboard(text) {
+				var tempInput = document.createElement("textarea");
+				tempInput.value = text;
+				document.body.appendChild(tempInput)
+				tempInput.select();
+				document.execCommand("copy");
+				document.body.removeChild(tempInput);
+				alert("Texte copié !");
+        }
 		</script>
 		<nav>
 			<div class="profile">
@@ -108,12 +118,12 @@
 				
 			</div>
 			
-			<div class="colonne">
+			<div class="colonne" id="adresse-mails">
 				<h3>Mes adresses mails</h3>
-                <p>- Par ordre de frequentation -</p>
-				<p>jordanturnaco@gmail.com</p>
-				<p>jordan.turnaco.pro@gmail.com</p>
-				<p>jordan.turnaco@ecoles-epsi.net</p>
+				<p>- Par ordre de fréquentation -</p>
+				<p><span onclick="copyToClipboard('jordanturnaco@gmail.com')">jordanturnaco@gmail.com</span></p>
+				<p><span onclick="copyToClipboard('jordan.turnaco.pro@gmail.com')">jordan.turnaco.pro@gmail.com</span></p>
+				<p><span onclick="copyToClipboard('jordan.turnaco@ecoles-epsi.net')">jordan.turnaco@ecoles-epsi.net</span></p>
 			</div>
 		</footer>
 	</body>
