changement sur Apropos

--- a/Apropos.html
+++ b/Apropos.html
@@ -58,7 +58,7 @@
 				<h3>Coordonnées</h3>
 				<p><strong>Téléphone:</strong> 0612302068</p>
 				<p><strong>Email:</strong> jordanturnaco@gmail.com</p>
-				<p><strong>Adresse:</strong> 5 allée du parc, Thorigny-sur-marne</p>
+				<p><strong>Adresse:</strong>Thorigny-sur-marne 77400</p>
 				<h3>Formation</h3>
 				<p>EPSI - Première année, Bachelor Informatique (Formation en cours)</p>
 				<h3>Compétences techniques</h3>
