--- a/Apropos.html
+++ b/Apropos.html
@@ -75,7 +75,7 @@
 					<li><strong>Projet Conception d’une application Python (FEVRIER 2024) - EPSI</strong><br> Création d'une application en console Python</li>
 				</ul>
 				<section class="Ecole">
-				<p>En savoir plus via mon <a class="cv-button" href="Projet.html">Voir Projets</a></p>
+				<p>En savoir plus <a class="project-button" href="Projet.html">Voir Projets</a></p>
 			
 				<p class="Description">
 					Actuellement en première année du Bachelor à l'EPSI Paris, je prévois, comme cela peut être déduit, de me spécialiser ultérieurement dans la filière cybersécurité. Pour plus de détails sur l'école, veuillez consulter le pied de page.
