changement description apropos

--- a/Apropos.html
+++ b/Apropos.html
@@ -65,7 +65,7 @@
 				<ul>
 					<li><strong>Langages:</strong> Python, HTML, CSS, PHP, MYSQL</li>
 					<li><strong>Base de données:</strong> Conception et exploitation</li>
-					<li><strong>Arts Visuels:</strong> Montages vidéos, Création de logos, dessins de personnages (depuis 7 ans)</li>
+					<li><strong>Arts Visuels:</strong> Montages vidéos, Création de logos</li>
 					<li><strong>Veille Technologique:</strong> Montages d’ordinateurs, Programmations</li>
 				</ul>
 				<h3>Projets récents</h3>
