changement description apropos

--- a/Apropos.html
+++ b/Apropos.html
@@ -53,9 +53,8 @@
 			</section>
 			<p class="Description">
 				<h2>Mon profil : </h2>
-				<p>Je suis TURNACO Jordan, un passionné de 18 ans évoluant dans le monde de l'informatique avec une fascination particulière pour la cybersécurité. Depuis mes premiers pas, j'ai consacré mon énergie à approfondir mes connaissances et à développer mes compétences, animé par le désir de relever les défis complexes et évolutifs du cyberespace.</p>
-				<p>Ma soif de connaissance m'entraîne constamment à explorer les dernières tendances en informatique, et j'aime particulièrement relever les défis liés à la protection des systèmes et des données contre les menaces en ligne. En tant que jeune passionné d'informatique, je suis déterminé à contribuer positivement à l'évolution constante de ce domaine et à jouer un rôle actif dans la protection des informations numériques.</p>
-				<h3>Coordonnées</h3>
+				<p>Je suis TURNACO Jordan, un passionné de 18 ans immergé dans l'univers captivant de l'informatique, où chaque ligne de code et chaque algorithme m'inspirent une passion indéfectible.</p>
+				<p>Mon insatiable soif de connaissances m'entraîne inlassablement à explorer les dernières avancées en informatique. Je me sens particulièrement attiré par les défis liés à la protection des systèmes et des données contre les menaces en ligne, bien que je reconnaisse humblement et que je suis encore novice dans le domaine de la cybersécurité. Cependant, cette lacune ne fait que renforcer ma détermination à en faire mon métier à l'avenir. En tant que jeune passionné d'informatique, je suis animé par le désir de contribuer positivement à l'évolution constante de ce domaine et de jouer un rôle actif dans la protection des informations numériques.</p>				<h3>Coordonnées</h3>
 				<p><strong>Téléphone:</strong> 0612302068</p>
 				<p><strong>Email:</strong> jordanturnaco@gmail.com</p>
 				<p><strong>Adresse:</strong>Thorigny-sur-marne 77400</p>
